# DeepDeepCube

./: .gitignore  README.md  a_star.py  cube3.py  cube3_game.py  dataset.py  main.py  models.py  requirements.txt
assets/envs/: cube_3_3_3_actions.pickle
assets/reports/: cpp_metropolis_reports.pkl  cpp_metropolis_reports_1000.pkl  cpp_parallel_reports.pkl  cpp_parallel_reports_1000.pkl  cpp_reports.pkl  cpp_reports_1000.pkl  report_dataframe.pkl  report_resnet_dataframe.pkl
assets/tests/: test_distance.pickle  test_distance_1000.pickle  test_states.pickle  test_states_1000.pickle  val_distance.pickle  val_states.pickle
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
cpp/: CMakeLists.txt  README.md  run.sh  test_a_star.py
cpp/src/: a_star.h  catboost_parallel_a_star.h  cube3_game.h  main.cpp  nodes.h  utils.h
notebooks/: actions.ipynb  playground.ipynb
